[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[lib]
name = "graphics"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
bytemuck = { version = "1.15.0", features = ["derive"] }
env_logger = "0.11.3"
glam = { version = "0.27.0", features = ["bytemuck"] }
image = "0.25.1"
log = "0.4.21"
pollster = "0.3.0"
tobj = { version = "4.0.2", features = ["async"] }
wgpu = "0.19.4"
winit = "0.29.15"

[build-dependencies]
glob = "0.3.1"
fs_extra = "1.3.0"
anyhow = "1.0.82"
